--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="phoneText">Phone:</string>
     <string name="detailsText">-</string>
     <string name="avatarDesc">Avatar</string>
+    <string name="img">Img</string>
 
     <string name="nameText1">Name:</string>
     <string name="emailText1">Email:</string>
